Update to the nav so random and A-Z works

--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -29,4 +29,5 @@
     <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="{{myPath}}js/shuffle.js"></script>
     <script src="{{myPath}}js/menu.js"></script>
+    <script src="{{myPath}}js/tinysort.js"></script>
 </head>
