--- a/src/_includes/menu.html
+++ b/src/_includes/menu.html
@@ -9,8 +9,8 @@
       {% else%}
           <li><a class="menu-item" href="{{ site.base_url }}">Home</a><span> &mdash;</span></li>
       {% endif %}
-          <li><a class="menu-item" href="#">A-Z</a><span> &mdash;</span></li>
-          <li><a class="menu-item" href="#">Random</a><span> &mdash;</span></li>
+          <li><a class="menu-item" data-tag="A-Z" href="#">A-Z</a><span> &mdash;</span></li>
+          <li><a class="menu-item" data-tag="Random" href="#">Random</a><span> &mdash;</span></li>
       {% for item in site.data.navigation %}
         {% assign my_array = item.name | split:" " %}
 
@@ -25,9 +25,9 @@
         {% endif %}
         {% if page.permalink == item.link and found != true %}
             {% assign found = true %}
-            <li><a class="menu-item selected" href="{{ site.base_url }}{{ item.link }}">{{  myString }}</a><span> &mdash;</span></li>
+            <li><a class="menu-item student selected" href="{{ site.base_url }}{{ item.link }}">{{  myString }}</a><span> &mdash;</span></li>
         {% else%}
-            <li><a class="menu-item" href="{{ site.base_url }}{{ item.link }}">{{  myString }}</a><span> &mdash;</span></li>
+            <li><a class="menu-item student" href="{{ site.base_url }}{{ item.link }}">{{  myString }}</a><span> &mdash;</span></li>
         {% endif %}
       {% endfor %}
         <li><a class="menu-item" href="{{ site.base_url }}credits/">Credits</a><span> &mdash;</span></li>
