--- a/src/_layouts/page.html
+++ b/src/_layouts/page.html
@@ -60,8 +60,21 @@
       $( "#menu-button" ).click(function() {
         openMenu();
       });
+      $( "#menu a" ).click(function() {
+        c = $(this).data("tag");
+        if(c == "A-Z"){
+          $(this).data("tag","Z-A");
+          $(this).text("Z-A");
+          tinysort('#menu>li>a.student',{selector:'span:nth-child(2)', order:'desc'});
+        }else if(c =="Z-A"){
+          $(this).data("tag","A-Z");
+          $(this).text("A-Z");
+          tinysort('#menu>li>a.student',{selector:'span:nth-child(2)'});
+        }else if (c == "Random"){
+          tinysort('#menu>li>a.student',{order:'rand'});
+        }
+      });
     })
   </script>
-
   </body>
 </html>
