--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -30,4 +30,7 @@
     <script src="{{myPath}}js/shuffle.js"></script>
     <script src="{{myPath}}js/menu.js"></script>
     <script src="{{myPath}}js/tinysort.js"></script>
+    <script src="{{myPath}}js/Menubutton2.js"></script>
+    <script src="{{myPath}}js/MenuItemLinks.js"></script>
+    <script src="{{myPath}}js/PopupMenuLinks.js"></script>
 </head>
