--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -11,7 +11,7 @@
   {% when "Publication" %}
      {% assign description = "Publication details for Graphic Design & Illustration Degree Show 2021, John Moores University" %}
   {% else %}
-     {% assign description = "Degree show 2021 page for " | append: page.title %}
+     {% assign description = page.title  | append: "| Graphic Design &amp; Illustration Degree Show 2021" %}
 {% endcase %}
 
 <!DOCTYPE html>
@@ -20,9 +20,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="{{description}}">
-    <meta name="keywords" content="Degree show, Graphic Design, Illustration, John Moores University, JMU, Arts School, Liverpool">
+    <meta name="keywords" content="{{page.title}}, Degree show, Graphic Design, Illustration, John Moores University, JMU, Arts School, Liverpool">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Graphic Design & Illustration Degree Show 2021 | {{page.title}}</title>
+    <title>{{page.title}} | Graphic Design &amp; Illustration Degree Show 2021</title>
       <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="{{myPath}}css/styles.css" />
@@ -30,7 +30,4 @@
     <script src="{{myPath}}js/shuffle.js"></script>
     <script src="{{myPath}}js/menu.js"></script>
     <script src="{{myPath}}js/tinysort.js"></script>
-    <script src="{{myPath}}js/Menubutton2.js"></script>
-    <script src="{{myPath}}js/MenuItemLinks.js"></script>
-    <script src="{{myPath}}js/PopupMenuLinks.js"></script>
 </head>
